* Changed setting names relating to autodetection of sweeps.


Version 8.1.0
-------------
* Require and use MATLAB R2024a (instead of MATLAB R2019b).
* Non-Standard Operations (NSO) table thruster firings updated for until
  2024-05-05.


Version 8.2.0
-------------
* Uses zVariable compression used in master CDFs.
* Requires new L2 master CDFs V15, updated for compliance with archiving
  conventions in
  * SOL-SGS-TN-0009, 02/06, "Metadata Definition for Solar Orbiter Science Data"
  * ROC-PRO-PIP-ICD-00037-LES, 01/07, RCS ICD
  Some code updates associated with this:
  * Correctly(?) setting TIME_MIN/TIME_MAX.
  * Setting "SPICE_KERNELS", "CAL_*", "CALIBRATION_*".
  * Not setting "Provider", "Parent_version".
* Requires BIAS RCT on new filenaming convention, e.g.
  "solo_CAL_rpw-bias_20220210-20990101_V01.cdf", by changing the default
  value for setting PROCESSING.RCT_REGEXP.BIAS.
* Non-Standard Operations (NSO) table thruster firings updated for until
  2024-05-19, and previously missing thruster firing for 2024-04-11.
* Produces datasets using CDF version 3.9.0.
* Removed obsoleted settings:
  OUTPUT_CDF.GA_MODS_ENABLED
  OUTPUT_CDF.WRITE_FILE_DISABLED
  OUTPUT_CDF.NO_PROCESSING_EMPTY_FILE
  JSON_OBJECT_STR.INDENT_SIZE
* Renamed setting:
     INPUT_CDF.GA_PROVIDER_MISMATCH_POLICY
  -->INPUT_CDF.GA_PARENTS_MISMATCH_POLICY
* Abolishes the unofficial --swdescriptor argument.


Version 8.2.1
-------------
* Bugfix: Including previously missing source code updates.


Version x.x.x
-------------
* Reinstate the unofficial --swdescriptor argument.
* Non-Standard Operations (NSO) table thruster firings updated for until
  2024-08-04.
* Always use bias_rct_validity.json for selecting BIAS RCT (never uses reg.exp.
  on filenames)
* Default value for setting PROCESSING.RCT_REGEXP.LFR updated for new filenaming
  convention (though assumes begin and end dates).
* Removed setting
  PROCESSING.RCT_REGEXP.BIAS